[tool.poetry]
name = "pytsmod"
version = "0.3.3"
description = "An open-source Python library for audio time-scale modification."
authors = ["Sangeon Yong <koragon2@kaist.ac.kr>"]

license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"
scipy = "^1.0"
soundfile = "^0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
flake8 = "^4.0.1"
numpydoc = "^1.3"

[tool.poetry.scripts]
tsmod = 'pytsmod.console:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
