[tool.poetry]
name = "pytsmod"
version = "0.3.7"
description = "An open-source Python library for audio time-scale modification."
authors = ["Sangeon Yong <koragon2@kaist.ac.kr>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
numpy = "^1.20"
scipy = "^1.8"
soundfile = "^0.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
flake8 = "^4.0.1"
numpydoc = "^1.0"
recommonmark = "^0.7.1"
furo = "^2023.9.10"

[tool.poetry.scripts]
tsmod = 'pytsmod.console:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
